--- a/public/style.css
+++ b/public/style.css
@@ -76,17 +76,23 @@ body {
   box-shadow: 0px 0px 78px -27px rgba(0,0,0,0.75);
 }
 
+.table-wrapper {
+  position: absolute;
+  transform: translate(-100%, -2px);
+  z-index: 10;
+  width: 300px;
+  height: 400px;
+  overflow: auto;
+  border-radius: 5px 5px 0 0;
+}
+
 .hamiltonianTable {
   background-color: white;
   color: black;
   border-collapse: collapse;
   font-size: 0.9em;
-  width: 100%;
   border-radius: 5px 5px 0 0;
-  overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  z-index: 10;
-  overflow-y: auto;
 }
 
 .hamiltonianTable thead tr {
