--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,6 @@ body {
 
 .nav {
   height: 0%;
-  /* flex: 0; */
   display: flex;
   background-color: var(--surface);
   box-shadow: 0 7px 9px -2px rgba(0,0,0,.9);
@@ -81,16 +80,14 @@ body {
   transform: translate(-100%, -2px);
   z-index: 10;
   width: 300px;
-  height: 400px;
   overflow: auto;
-  border-radius: 5px 5px 0 0;
 }
 
 .hamiltonianTable {
   background-color: white;
   color: black;
   border-collapse: collapse;
-  font-size: 0.9em;
+  font-size: 1.2em;
   border-radius: 5px 5px 0 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
@@ -293,7 +290,7 @@ strong {
   background-color: white;
   color: rgb(51, 51, 51);
   position: absolute;
-  border: 3.5px solid rgb(51, 51, 51);
+  /* border: 3.5px solid rgb(51, 51, 51); */
   padding: 15px;
   transform: translate(-100%, -2px);
 }
