--- a/public/style.css
+++ b/public/style.css
@@ -84,10 +84,30 @@ body {
   overflow: auto;
 }
 
+.tableVisible {
+  opacity: 1;
+}
+
+.tableTransparent {
+  opacity: 0.1;
+}
+
 #dp-container::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
+}
+
+.toggle-table-visibilty {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-weight: bold;
+  color: black;
+  padding: 0 10px 0 10px;
+  background-color: #D3D3D3;
+  border-radius: 5px;
+  z-index: 10000;
 }
 
 #dp-container::-webkit-scrollbar {
@@ -244,6 +264,7 @@ th {
 }
 
 #app-area {
+  position: relative;
   width: 70%;
   height: 100%
 }
